--- a/REO 2 - Python/.vscode/settings.json
+++ b/REO 2 - Python/.vscode/settings.json
@@ -7,7 +7,7 @@
   "code-runner.runInTerminal": true,
   "python.linting.mypyEnabled": true,
   "python.linting.flake8Enabled": true,
-  "python.testing;unittestEnabled": true,
+  "python.testing.unittestEnabled": true,
   "[python]": {
     "editor.formatOnSave": true
   }
